@@ -1,0 +1,5 @@
+themedir = $(datadir)/themes/Crux/gtk-2.0
+theme_DATA = gtkrc  
+
+EXTRA_DIST = $(theme_DATA)
+
